# synthed

./: .gitignore  LLM.md  README.md  main.py  pyproject.toml  synthed.py
